--- a/paper/main.tex
+++ b/paper/main.tex
@@ -1,4 +1,5 @@
-\documentclass[acmsmall,review,anonymous]{acmart}\settopmatter{printfolios=true,printccs=false,printacmref=false}
+\documentclass[acmsmall,review,anonymous]{acmart}
+\settopmatter{printfolios=true,printccs=false,printacmref=false}
 
 \usepackage{times}
 \usepackage{datetime}
@@ -58,6 +59,7 @@
   \providecommand\BibTeX{{%
     \normalfont B\kern-0.5em{\scshape i\kern-0.25em b}\kern-0.8em\TeX}}}
 
+\citestyle{acmauthoryear}
 
 % May send this work to Emery and Qiang zheng for their feedbacks. 
 
